Fix faculty/department filters alignment

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -248,8 +248,9 @@ $module-section-min-height: 700px;
   font-weight: normal;
 }
 
-.filter-department label.checkbox.inline {
+.facet-Department .checkbox-inline {
   display: block;
+  margin-left: 0;
 }
 
 .arrow-right {
